<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.game.rememberwhen.MainActivity">

    <TextView
        android:id="@+id/GameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin_semibold"
        android:hint="@string/player_name"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:ems="10"
        android:hint="@string/player_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/joinButton"
        android:layout_width="166dp"
        android:layout_height="76dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/cabin"
        android:onClick="joinRoom"
        android:text="@string/join_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createRoomButton" />

    <Button
        android:id="@+id/createRoomButton"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/cabin"
        android:onClick="createRoom"
        android:text="@string/create_room"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/joinButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameName" />

</androidx.constraintlayout.widget.ConstraintLayout>